tests/ui/compile-fail/params.stderr
error: required a string literal
 --> $DIR/params.rs:4:15
  |
4 | #[rye(crate = 10)]
  |               ^^

error: duplicated parameter
 --> $DIR/params.rs:9:7
  |
9 | #[rye(crate = "rye")]
  |       ^^^^^^^^^^^^^

error: unknown parameter name
  --> $DIR/params.rs:13:7
   |
13 | #[rye(the_quick_fox = "lazy")]
   |       ^^^^^^^^^^^^^
